--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.MainFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/grid"
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
